1.2-kripken/build/testkeys.c.log
[1m../SDL-1.2.15/testkeys.c:20:12: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'SDLK_FIRST'[0m
        for ( key=SDLK_FIRST; key<SDLK_LAST; ++key ) {
[0;1;32m                  ^
[0m1 error generated.
ERROR    root: [31mcompiler frontend failed to generate LLVM bitcode, halting[0m
